added an overlay effect on the first top image

--- a/fra5.html
+++ b/fra5.html
@@ -22,7 +22,8 @@
         <label for="nav-toggle" class="nav-toggle-label"><span></span></label>
     </header>
     <section class="sec1">
-        <img src="img/francesco_top.jpg" alt="">
+        <!-- <img src="img/francesco_top.jpg" alt=""> -->
+        <div class="overlay"></div>
     </section>
     <section class="sec2">
         <p class="info">Francesco Lomagistro, began piano studies at age of 11 and later switched to drums. He received his music education through private lessons and attendance at seminars by great musical Masters. He received his Degree in ‘Percussion Instruments’ at the “Niccolo Piccinni” Music Conservatory in Bari, Italy and the Degree in “Didactis for Musical Instruments ”- He teaches “Drums and Percussions” at Liceo Musicale.</p>
