changed some css rules and modify about page into music page

--- a/projects.html
+++ b/projects.html
@@ -11,12 +11,12 @@
    
     <body>
         <header>
-            <h1 class="logo"><a href="index.html">FL</a></h1>
+            <h1 class="logo"><a href="index.html">Francesco Lomagistro</a></h1>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="music.html">Music</a></li>
                     <li><a href="projects.html">Project</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
