--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><a href="index.html">FL</a></h1>
+        <h1 class="logo"><a href="index.html">Francesco Lomagistro</a></h1>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="music.html">music</a></li>
                 <li><a href="projects.html">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
