changed the project page

--- a/projects.html
+++ b/projects.html
@@ -23,14 +23,12 @@
             </nav>
             <label for="nav-toggle" class="nav-toggle-label"><span></span></label>
         </header>
-        <!-- <section class="sec1 pro1">
-            <div class="overlay"></div>
-        </section> -->
-        <section class="pro1"></section>
-        <section class="sec2 pro2"></section>
-        <section class="sec3 pro3"></section>
         
-
+        <section class="sec1">
+            <div class="overlay"></div>
+        </section>
+        <section class="sec2"></section>
+        <section class="sec3"></section>
 
 
 
