add new pic for every page

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="fra5.css">
+    <link rel="stylesheet" href="project.css">
     
 </head>
    
