--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="music.html">Music</a></li>
                 <li><a href="projects.html">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
