--- a/music.html
+++ b/music.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Francesco Lomagistro</title>
     <link rel="stylesheet" href="fra5.css">
+    <link rel="stylesheet" href="music.css">
     
 </head>
 <body>
