changed some text and the contac page image

--- a/music.html
+++ b/music.html
@@ -41,7 +41,7 @@
                     <iframe src="https://www.youtube.com/embed/pGQPfyre-M4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="box video3">
-                    <iframe  src="https://www.youtube.com/embed/q4VUXzss7zo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <iframe src="https://www.youtube.com/embed/psHhSxM2bAU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="box video4">
                     <iframe src="https://www.youtube.com/embed/-PhldhdxPZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
